Refactor host of match to be identified by Id (not username).